--- a/music_app/pubspec.yaml
+++ b/music_app/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_svg: ^1.1.6
   google_fonts: ^3.0.1
   http: ^0.13.5
+  get: ^4.6.5 
 
 dev_dependencies:
   flutter_test:
